--- a/demo.html
+++ b/demo.html
@@ -2,24 +2,26 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>Expressive Inverse Kinematics | CS 184 Final Project Demo</title>
+<link rel="stylesheet" href="style.css">
 <link rel="icon" href="penrosetriangle.svg">
 </head>
-<body style="margin:0;padding:0;">
-<div id="demo">
-  <noscript>
-    Please enable JavaScript to see demo.
-  </noscript>
-
-    <!-- You can move target point with WASD for the x- and z- axes, and hold SHIFT while moving your mouse up or down to move in the y-axis. -->
-  <!-- <script src="./lib/three.js"></script> -->
-	<script src="./lib/Tween.min.js"></script>
-	<script src="./lib/perlin.js"></script>
-	<script src="./lib/dat.gui.min.js"></script>
-	<script src="./lib/stats.js"></script>
-	<script src="./lib/three.js"></script>
-	<script src="./lib/OBJLoader.js"></script>
-	<script src="./lib/OrbitControls.js"></script>
-  <script src="./demo.js"></script>
-</div>
+<body class="sans">
+<a href="./index.html">HOME</a> / <a href="./proposal.html">PROPOSAL</a> / <b><a href="#">MILESTONE</a></b> / <a href="./project.html">WRITEUP</a>  / <a href="./demo.html">DEMO</a>
+<br />
+<br />
+<br />
+<br />
+<h1 class="page-title">Expressive Inverse Kinematics</h1><h1>CS 184 Final Project Demo</h1>
+Eunice Chan | <i>August 14, 2020</i>
+<br />
+<br />
+<br />
+<p><a href="./ik.html">Fullscreen here.</a></p>
+<iframe style="width:100%;height:50vw" src="./ik.html"></iframe>
+<h1>Instructions</h1>
+<ul>
+  <li>WASD to move target point along the X-Z axes.</li>
+  <li><code>SHIFT</code> + move mouse up or down to move along the Y axis.</li>
+</ul>
 </body>
 </html>
