--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 <h1>My Materials from CS 184: Computer Graphics</h1>
 Eunice Chan | <i>June 22, 2020</i>
 <br />
+<br />
 <h2>Who Am I?</h2>
-Hi! I'm Eunice. This summer from June 22, 2020 - August 14, 2020, I took UC Berkeley's CS 184: Computer Graphics. It was a lot of fun! This website holds the material I produced while taking this course.
+<p>Hi! I'm Eunice. This summer from June 22, 2020 - August 14, 2020, I took UC Berkeley's CS 184: Computer Graphics. It was a lot of fun! This website holds the material I produced while taking this course.</p>
 <br />
 <br />
 <h2>What is This Website?</h2>
-One of the deliverables for the final project is a final report hosted on a webpage! I couldn't decide between making the final submission the homepage or the proposal, so this was the compromise I came up with. I wanted to review my experience in this class after I was done anyway, so I'm very satisfied with this outcome.
+<p>One of the deliverables for the final project is a final report hosted on a webpage! I couldn't decide between making the final submission the homepage or the proposal, so this was the compromise I came up with. I wanted to review my experience in this class after I was done anyway, so I'm very satisfied with this outcome.</p>
 <br />
 <br />
 <h2>What are Your Thoughts on CS 184?</h2>
-Ahhh I'm still taking it so I'll write a more in-depth reflection later! In three words, I recommend it!
+<p>Ahhh I'm still taking it so I'll write a more in-depth reflection later! In three words, I recommend it!</p>
 <br />
 <br />
 <h2>Materials</h2>
-I'll link to my past projects, and potentially my notes. There's still a lot of organizing to do there so I'll put it up later! It's on my todo list. But while you're here, why not check out what I'm doing on my final project?
-<br />
+<p>I'll link to my past projects, and potentially my notes. There's still a lot of organizing to do there so I'll put it up later! It's on my todo list. But while you're here, why not check out what I'm doing on my final project?</p>
 <br />
 <ul>
 <li><a href="./three.html">Notes for the Learning 3D Graphics on the Web with Three.js online course</a></li>
