--- a/milestone.html
+++ b/milestone.html
@@ -16,15 +16,15 @@
 Eunice Chan | <i>August 7, 2020</i>
 <br />
 <br />
+<br />
 <!--
 This should be about 1 page long if printed. You should briefly summarize what you have accomplished, preliminary results, reflect on progress relative to your plan, and update your work plan as appropriate.
  -->
-It has been a week since I started this project, meaning I am now at the halfway point of the project. I will now take a step back and assess my current progress.
+<p>It has been a week since I started this project, meaning I am now at the halfway point of the project. I will now take a step back and assess my current progress.</p>
 
 <h2>Achievements and Preliminary Results</h2>
 <h3>Model</h3>
-I went through three iterations of model-creation because of the various challenges I faced.
-<br />
+<p>I went through three iterations of model-creation because of the various challenges I faced.</p>
 <ol>
   <li>Blender model ( attempted to export and import as .GLTF and .OBJ )</li>
   <li>Three.js geometry primitive with shaping done by scaling the bones</li>
@@ -48,8 +48,7 @@ I went through three iterations of model-creation because of the various challen
   </tr>
 </table>
 <h3>Demo</h3>
-I implemented the interactive demo interface. Currently, the demo only has forward kinematics and a moveable target.
-<br />
+<p>I implemented the interactive demo interface. Currently, the demo only has forward kinematics and a moveable target.</p>
 <br />
 <div>
   <video style="width:100%;padding:0 10%;" preload controls>
@@ -67,12 +66,11 @@ I implemented the interactive demo interface. Currently, the demo only has forwa
   <figcaption style="width:100%;padding:0 10%;">Major feature 2: Moving the target point</figcaption>
 </div>
 <h2>Progress</h2>
-I have managed to achieve everything I have set out to do so my current progress is exactly as planned.
+<p>I have managed to achieve everything I have set out to do so my current progress is exactly as planned.</p>
 <h2>Work Plan Updates</h2>
-The most updated version of the work plan is <a href="./proposal.html#schedule">here</a>.
+<p>The most updated version of the work plan is <a href="./proposal.html#schedule">here</a>.</p>
 <br />
-<br />
-The <a href="./proposal.html#changelog">changes</a> I have made to the plan are:
+<p>The <a href="./proposal.html#changelog">changes</a> I have made to the plan are:</p>
 <p class="highlight-orange_background"><i>August 4 Update</i>: Made SMCM a [goal] and moved the two models to [reach goal]. </p>
 <br />
 </body>
