--- a/project.html
+++ b/project.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js" integrity="sha384-g7c+Jr9ZivxKLnZTDUhnkOnsh30B4H0rpLUpJ4jAIKs4fnJI+sEnkvrMWph2EDg4" crossorigin="anonymous"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/contrib/auto-render.min.js" integrity="sha384-mll67QQFJfxn0IYznZYonOWZ644AWYC+Pt2cHqMaRhXVrursRwvLnLaebdGIlYNa" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 <title>Expressive Inverse Kinematics | CS 184 Final Project Project Report</title>
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="penrosetriangle.svg">
@@ -36,29 +40,23 @@ Eunice Chan | <i>August 14, 2020</i>
   </tr>
 </table>
 <br />
-The first thing I did was create the model. I found this part to be unexpectedly challenging. My initial idea was to create the model in Blender and export it as a Three.js native model with the Three.js model exporter plugin. However, I found out that it was deprecated and that Three.js suggests loading in a <code>.GLTF</code> (Graphics Library Transmission Format) file instead.
-<br />
-A <code>.GLTF</code> file is a kind of file format for 3D scenes and models using the <code>JSON</code> (JavaScript Object Notation) format. It is intended for web use and therefore has a minimum file size and runtime processing by apps. I couldn't see any downsides to following Three.js' suggestion, so I created my model in Blender and exported it as a <code>.GLTF</code> file.
-So, I decided to take their suggestion and export as a <code>.GLTF</code> file.
-<br />
-Unfortunately, I ran into unexpected difficulty loading it in because the Three.js Github repo has everything in modules, which I cannot use if I do not have a server. I wanted to avoid a server if I could, so that I could host on Github Pages. As a result, I spent a long time trying to find the piece of the code that could load in my file. I did not have much luck.
-<br />
-Fortunately, I had taken an online course I took to get up to speed on Three.js. In that course, there were exercise files to accompany the videos. Most importantly, the libraries the exercises depended on were included, and one of the files in the library held the code for loading in <code>.OBJ</code> files.
-<br />
-Therefore, my next approach was to convert the <code>.GLTF</code> file I had into a <code>.OBJ</code> file. With this approach, I was able to successfully load it in, but I had to start up a server to do so as I got an error:
-<br />
+<p>The first thing I did was create the model. I found this part to be unexpectedly challenging. My initial idea was to create the model in Blender and export it as a Three.js native model with the Three.js model exporter plugin. However, I found out that it was deprecated and that Three.js suggests loading in a <code>.GLTF</code> (Graphics Library Transmission Format) file instead.</p>
+<p>A <code>.GLTF</code> file is a kind of file format for 3D scenes and models using the <code>JSON</code> (JavaScript Object Notation) format. It is intended for web use and therefore has a minimum file size and runtime processing by apps. I couldn't see any downsides to following Three.js' suggestion, so I created my model in Blender and exported it as a <code>.GLTF</code> file.
+So, I decided to take their suggestion and export as a <code>.GLTF</code> file.</p>
+<p>Unfortunately, I ran into unexpected difficulty loading it in because the Three.js Github repo has everything in modules, which I cannot use if I do not have a server. I wanted to avoid a server if I could, so that I could host on Github Pages. As a result, I spent a long time trying to find the piece of the code that could load in my file. I did not have much luck.</p>
+<p>Fortunately, I had taken an online course I took to get up to speed on Three.js. In that course, there were exercise files to accompany the videos. Most importantly, the libraries the exercises depended on were included, and one of the files in the library held the code for loading in <code>.OBJ</code> files.</p>
+<p>Therefore, my next approach was to convert the <code>.GLTF</code> file I had into a <code>.OBJ</code> file. With this approach, I was able to successfully load it in, but I had to start up a server to do so as I got an error:</p>
 <br />
 <div class="code code-wrap">Access to XMLHttpRequest at 'path/to/models/arm.obj' from origin 'null' has been blocked by CORS policy: Cross origin requests are only supported for protocol schemes: http, data, chrome, chrome-extension, https.
 </div>
 <br />
-I continued forward and ran into issues accessing the model's armature. I looked around online but did not find much information. I decided to drop this approach because
+<p>I continued forward and ran into issues accessing the model's armature. I looked around online but did not find much information. I decided to drop this approach because</p>
 <ol>
   <li>I had to use a server. From what I understood, it's only necessary if it was a local file, but I didn't want to delve too deep into this</li>
   <li>The model was relatively simple, so I suspected it would be faster to instead make the model in Three.js.</li>
 </ol>
-Hence, I started my second approach. I decided to shape the model by scaling the bones so that a wavy shape would form. It went well. However, when I was implementing forward kinematics, I realized I could not pretend two bones were one. I had split up each segment of the arm into two so that I could put a swell in the middle of each segment, and had assumed the fact there were two bones wouldn't change anything, as long as I only translate the "real" bones. That was a misconception.
-<br />
-Thus, I moved on to my final approach. I iterated over every vertex and set it's position. Below is the commented function that I did positioned the points in:
+<p>Hence, I started my second approach. I decided to shape the model by scaling the bones so that a wavy shape would form. It went well. However, when I was implementing forward kinematics, I realized I could not pretend two bones were one. I had split up each segment of the arm into two so that I could put a swell in the middle of each segment, and had assumed the fact there were two bones wouldn't change anything, as long as I only translate the "real" bones. That was a misconception.</p>
+<p>Thus, I moved on to my final approach. I iterated over every vertex and set it's position. Below is the commented function that I did positioned the points in:</p>
 <div class="code code-wrap">function createGeometry( sizing ) {
 
   // Sets the ratio and size of the rectangle
@@ -158,29 +156,45 @@ Thus, I moved on to my final approach. I iterated over every vertex and set it's
 
 }
 </div>
-Once I got the positioning done, that was all I had to do as I had already rigged the model and added it to the control panel when I was working with the bone scaling model version. I did not have to change it much.
+<p>Once I got the positioning done, that was all I had to do as I had already rigged the model and added it to the control panel when I was working with the bone scaling model version. I did not have to change it much.</p>
+<h2>Demo</h2>
+<p>I used <a href="https://threejs.org/docs/#api/en/objects/SkinnedMesh">https://threejs.org/docs/#api/en/objects/SkinnedMesh</a> as starter code. It provided to me a basic scene setup, which I then modified. I altered the number/positioning of lights, some of the control parameters, drastically modified geometry of the model, and altered the user-facing variable controller to be associated with the correct joint parameters of the model. Here it is below: </p>
+<a href="https://threejs.org/docs/scenes/bones-browser.html">https://threejs.org/docs/scenes/bones-browser.html</a>
+<iframe style="width:100%;height:50vw" src="https://threejs.org/docs/scenes/bones-browser.html"></iframe>
 <h3>Forward Kinematics</h3>
-Although I had initially written forward kinematics as a reach goal, I realized it wasn't very difficult, and would be helpful for checking if I rigged the model correctly.
-Implementing forward kinematics was straightforward. Forward kinematics is defined as the process of obtaining the velocity and position of the end effectors given the input of the joint angles and angular velocities. In this case, I take in the user input which is the rotation or position of the joint and apply it to the model, transforming it from one pose to another.
-<br />
-In the demo, I constrained the user input so it won't be too overwhelming. I anchored the model in one position and gave it the approximate constraints of an arm.
-<br />
+<p>Although I had initially written forward kinematics as a reach goal, I realized it wasn't very difficult, and would be helpful for checking if I rigged the model correctly.</p>
+<p>Implementing forward kinematics was straightforward. Forward kinematics is defined as the process of obtaining the velocity and position of the end effectors given the input of the joint angles and angular velocities. In this case, I take in the user input which is the rotation or position of the joint and apply it to the model, transforming it from one pose to another.</p>
+<p>In the demo, I constrained the user input so it won't be too overwhelming. I anchored the model in one position and gave it the approximate constraints of an arm.</p>
 <br />
 <video style="width:100%;padding:0 10%;" preload controls>
     <source src="./images/FK_demo.mov" />
     <p>Your browser doesn't support my video. Here is a <a href="./images/FK_demo.mov">link to the video</a> instead.</p>
 </video>
 <h3>Moveable Target Point</h3>
-The second major part of the demo is that I need to be able to set the target point. My first thought was to implement it with the arrow keys. However, I quickly realized that the arrow keys can only control two dimensions and there are three dimensions (four if you include time) in the demo. The arrows keys are also being use by the <code>OrbitControls</code> and I really enjoyed having the ability to move around the scene, so I was reluctant to part with it.
-<br />
-In the end, I decided to implement the controls to be WASD & <code>shift</code> + mouseMoveDirection (calculated by storing the previous mouse location and the current) with <code>space</code> being the key that resets its position.
-<br />
-I find it a little clunky, but it's much better than tediously dragging sliders around, so I decided to stick with this approach unless I think of something better.
-<br />
+<p>The second major part of the demo is that I need to be able to set the target point. My first thought was to implement it with the arrow keys. However, I quickly realized that the arrow keys can only control two dimensions and there are three dimensions (four if you include time) in the demo. The arrows keys are also being use by the <code>OrbitControls</code> and I really enjoyed having the ability to move around the scene, so I was reluctant to part with it.</p>
+<p>In the end, I decided to implement the controls to be WASD & <code>shift</code> + mouseMoveDirection (calculated by storing the previous mouse location and the current) with <code>space</code> being the key that resets its position.</p>
+<p>I find it a little clunky, but it's much better than tediously dragging sliders around, so I decided to stick with this approach unless I think of something better.</p>
 <br />
 <video style="width:100%;padding:0 10%;" preload controls>
     <source src="./images/target_demo.mov" />
     <p>Your browser doesn't support my video. Here is a <a href="./images/target_demo.mov">link to the video</a> instead.</p>
 </video>
+<br />
+<p>At this point, it looks kind of like <a href="https://d.ibtimes.co.uk/en/full/1567896/pokemon-sun-and-moon-starter-evolutions.png?w=736">Popplio</a> so you're free to consider this a  seal instead of an arm.</p>
+<h3>The Levenberg–Marquardt (LM) Damped Least-Squares (DLS) Algorithm</h3>
+<p>This optimization algorithm is the Gauss–Newton (GN) algorithm with the addition of a trust region to solve non-linear least squares problems. This is an iterative algorithm, so the choice of starting point may cause it to be trapped in a local minima or the global minima, which may happen in this use-case since inverse kinematics is riddled with local minima.</p>
+<p>LM takes in as an input a cost function \(f\) and a parameter vector \(\beta\) initialized with some values and returns a local minimum of the cost function. If there is only one minimum, \(\beta\) can be initialized to anything. In contrast, if there are many local minima, it should be initialized to a vector close to the global minimum to avoid converging to local minima.</p>
+<br />
+<img src="http://www.brnt.eu/phd/img251.png" />
+<br />
+<br />
+<p>We iterate until either the stopping criterion \(\text{STOP-CRIT}\) is reached, or the number of interations \(k\) is equal to the maximal number of iterations \(k < k_{max}\). The stopping criterion can be anything. Typically in LM, we stop when the change (in the solution, in the cost function, relative change, etc.) is very small, because that means it is sufficiently near the minimum. In each iterations, we update our estimated \(\beta\) to be \(\beta + \delta\).</p>
+<p>In GN, \(\delta=(J^TJ)^{-1}Jf\) where J is the Jacobian of the function evaluated at x. LM modifies this by adding a damping factor. The resulting equations are called the augmented normal equations. \(\delta\) is thus defined as the solution to that linear system of equations: \((J^TJ + \lambda\text{diag}(J^TJ))\delta = Jf\) where \(\lambda\) is a positive damping parameter.</p>
+<p>Initially, Levenberg modified the system of equations to \((J^TJ + \lambda\text{diag}(I))\delta = Jf\) which had the issue of inverting \((J^TJ + \lambda\text{diag}(I))\) not being used at all when \(\lambda\) is large. In a 1971 paper titled <i>A modified Marquardt subroutine for non-linear least squares</i>, Fletcher modified this algorithm, creating the LM algorithm, in which each component of the gradient is scaled according to the curvature, so that there is larger movement along the directions where the gradient is smaller.</p>
+<p>At each iteration, \(\beta\) is updated if the new version has a lower cost, and \(\lambda\) is updated by either multiplying or dividing by a constant \(v\) (typically set to 2), if there is an improvement or deprovement of the cost function respectively.</p>
+<p>The augmented matrix \(J^TJ + \lambda\text{diag}(J^TJ)\) has the property of positive definiteness making \(\delta\) a step in the descent direction. Thus, this algorithm is like gradient descent when \(\lambda\) is large, and like Gauss-Newton when \(\lambda\) is small, which is good because the convergence of the Gauss-Newton method can be almost quadratic near the minimum.</p>
+<p>To simplify things, I will not consider joint constraints.</p>
+<br />
+\(x^2 = \sqrt{y}\)
 </body>
 </html>
