Stuck on predicting transform

--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,7 @@
 <link rel="icon" href="penrosetriangle.svg">
 </head>
 <body class="sans">
-<a href="./index.html">HOME</a> / <a href="./proposal.html">PROPOSAL</a> / <b><a href="#">MILESTONE</a></b> / <a href="./project.html">WRITEUP</a>  / <a href="./demo.html">DEMO</a>
+<a href="./index.html">HOME</a> / <a href="./proposal.html">PROPOSAL</a> / <a href="./milestone.html">MILESTONE</a> / <a href="./project.html">WRITEUP</a>  / <b><a href="./demo.html">DEMO</a></b>
 <br />
 <br />
 <br />
