--- a/ik.html
+++ b/ik.html
@@ -12,8 +12,6 @@
   Please enable JavaScript to see demo.
 </noscript>
 
-  <!-- You can move target point with WASD for the x- and z- axes, and hold SHIFT while moving your mouse up or down to move in the y-axis. -->
-<!-- <script src="./lib/three.js"></script> -->
 <script src="./lib/Tween.min.js"></script>
 <script src="./lib/perlin.js"></script>
 <script src="./lib/dat.gui.min.js"></script>
@@ -21,6 +19,11 @@
 <script src="./lib/three.js"></script>
 <script src="./lib/OBJLoader.js"></script>
 <script src="./lib/OrbitControls.js"></script>
+
+<script src="./manipulationUtils.js"></script>
+<script src="./methodsIK.js"></script>
+<script src="./demoUtils.js"></script>
 <script src="./demo.js"></script>
+
 </body>
 </html>
