--- a/proposal.html
+++ b/proposal.html
@@ -171,6 +171,10 @@ Add style to the movements and wrap up project.
 <ul class="to-do-list">
   <li>
     <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Update endpoint world position / find the position of endpoint after apply base transform</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
     <span class="to-do-children-unchecked">Implement IK methods for arm model: Damped least squares / Levenberg–Marquardt algorithm</span>
   </li>
   <li>
