--- a/proposal.html
+++ b/proposal.html
@@ -19,6 +19,7 @@ Eunice Chan | <i>August 1, 2020</i>
 <br />
 <br />
 <h2 id="changelog">Changelog</h2>
+<p class="highlight-red_background"><i>August 2 Update</i>: Made forward kinematics a goal. </p>
 <p class="highlight-orange_background"><i>August 4 Update</i>: Made SMCM a goal and moved the two models to reach goal. </p>
 <h2>Summary</h2>
 <p>In this project, I will explore and implement the common techniques to tackle inverse kinematics (IK). I am particularly interested in IK algorithms that allow a greater degree of ability to control stylistic variations of the animation. Because of this, I will primarily be looking at the iterative methods using a cost function to be minimized and Sequential Monte Carlo methods (SMCM) for solving IK problems.</p>
@@ -33,6 +34,7 @@ Eunice Chan | <i>August 1, 2020</i>
   <li>Create or find robot / basic arm, <span class="highlight-orange">and if time permits,</span> rope, and human figure models.</li>
   <li>Place robot / basic arm, rope, and human figure in three isolated environments, and associate a "limb" with a control / target point while associating another part / limb with an anchor.</li>
   <li>Implement extra functionality for ease of testing such as switching between environments, start / stop simulation, dropdown menu to switch among the IK methods implemented, select different style constraints, etc. (Done at beginning and at the end (wrap up) phases of the project)</li>
+  <li class="highlight-red">Implement forward kinematics</li>
 </ul>
 <h3>Deliverables</h3>
 <ul>
@@ -40,11 +42,13 @@ Eunice Chan | <i>August 1, 2020</i>
   <li>Basic demo done with the ability to <strike class="highlight-orange">switch among the three objects and</strike> move the target point.</li>
   <li>Demo of demoable testing features.</li>
 </ul>
-<h3>Reach Goal: Forward Kinematics</h3>
-<ul>
-  <li>Implement forward kinematics</li>
-  <li>Implement other features to make testing easier / more interactive</li>
-</ul>
+<strike class="highlight-red">
+  <h3>Reach Goal: Forward Kinematics</h3>
+  <ul>
+    <li>Implement forward kinematics</li>
+    <li>Implement other features to make testing easier / more interactive</li>
+  </ul>
+</strike>
 <h3>Goal 2: IK</h3>
 <p>Implement basic IK.</p>
 <ul>
@@ -153,7 +157,7 @@ Add style to the movements and wrap up project.
 <ul class="to-do-list">
   <li>
     <div class="checkbox checkbox-on"></div>
-    <span class="to-do-children-checked">[Reach Goal] Implement basic forward kinematics</span>
+    <span class="to-do-children-checked">Implement basic forward kinematics</span>
   </li>
   <li>
     <div class="checkbox checkbox-on"></div>
