--- a/milestone.html
+++ b/milestone.html
@@ -82,22 +82,35 @@ My Descent into Madness, a 4-part comedy
   <figcaption>Act 1: Following the verion of the Levenberg-Marquardt algorithm as discussed in <a href="http://www.brnt.eu/publications/brunet2010phd.pdf">here</a>. Got confused and switched to <a href="https://www.researchgate.net/figure/Levenberg-Marquardt-algorithm_fig1_271100201">this</a>.</figcaption>
 </figure>
 <figure>
+  <table>
+    <tr>
+      <td>
+        <img style="max-height:100vh" src="./images/mydescentintomadnessbonus.png" />
+      </td>
+      <td>
+        <img src="./images/failure.png" />
+      </td>
+    </tr>
+  </table>
+  <figcaption>Intermission: I had implemented the version as described by the thesis with my best guesses, but it did not work very well at all through a combination of bugs and just being wrong. After debugging for a while, I decided it was not a good investment of my time and I would be better of reviewing the details of LM.</figcaption>
+</figure>
+<figure>
   <img src="./images/mydescentintomadnesspt2.png" />
-  <figcaption>Act 2: Got frustrated because the details did not seem to be explained clearly enough in the thesis I read, so I read the paper's description more thoroughly.</figcaption>
+  <figcaption>Act 2: Got frustrated because the details did not seem to be explained clearly enough in the thesis I read, so I decided to read and annotate the paper's description more thoroughly.</figcaption>
 </figure>
 <figure>
   <img src="./images/mydescentintomadnesspt3.png" />
-  <figcaption>Manual positioning</figcaption>
+  <figcaption>Act 3: I narrowed down the reason for my confusion to the Jacobian (\(J\) in the first article, \(F_0\) in the second article) and the residual term. </figcaption>
 </figure>
 <figure>
   <img src="./images/mydescentintomadnesspt4.png" />
-  <figcaption>Manual positioning</figcaption>
+  <figcaption>Act 4: I spent a long time being confused by how the matrix multiplication works out. Eventually, most of my questions were resolved and I decided I was in a good place to move forward. I still had some lingering questions but I decided if one version of my interpretation fails, I'll just try the second one which would hopefully be the right one.</figcaption>
 </figure>
 
 <h2>Progress</h2>
 <p>I started working on an IK method. However, while working on it, I realized I needed more helper functions (such as the calculation of a child element's new position once a set of rotations and translations are applied to the armature of its parents without actually applying the rotations) so I had to take a detour to work on that. I think the first method would take the longest to implement due to such detours. Once I get that done, the rest would probably not take as long.</p>
 <p>It was a little rough understanding it because the way people explained it was oftentimes very ambigious because there was a lot of flexibility in how to implement it. However, this also meant I wasn't 100% sure about the terms or how to specifically calculate things (such as for the Jacobian, since everything was interweaved and I didn't have a mathematical formula for the total effect, I ended up searching online for an example and scaling down my implementation so it would be easier to calculate the Jacobian of the joints) and I had to look at several articles to understand what was necessary and what was specific to each implementation (one of them normalized the parameters. which I wasn't sure if I wanted because I wanted to reach the target point, not be in the direction of the target point.)</p>
-<p>It took about three days to do the research for this method. The high level idea was easy to understand, but once I started trying to implement it, a lot of the details tripped me up. From the state I am right now, I may need to implement Cholesky decomposition, which would end up eating up more time. For the other IK goals I had initially planned on doing, depending on how long this one takes, I may one get to one of them. One of them is a selectively damped version so hopefully it won't take as long to understand and the other is SMCM, which is completely different so I would need to look into it more. However, regarding stylizing it, I would need to do much more research into how to stylize and that may be a little difficult to do within the timeframe provided.</p>
+<p>It took about three days to do the research for this method. The high level idea was easy to understand, but once I started trying to implement it, a lot of the details tripped me up. From the state I am right now, I may need to implement Cholesky decomposition, which would end up eating up more time. For the other IK goals I had initially planned on doing, depending on how lsong this one takes, I may one get to one of them. One of them is a selectively damped version so hopefully it won't take as long to understand and the other is SMCM, which is completely different so I would need to look into it more. However, regarding stylizing it, I would need to do much more research into how to stylize and that may be a little difficult to do within the timeframe provided.</p>
 
 <h2>Work Plan Updates</h2>
 <p>The most updated version of the work plan is <a href="./proposal.html#schedule">here</a>.</p>
