updated progress and expectations

--- a/proposal.html
+++ b/proposal.html
@@ -173,40 +173,79 @@ Add style to the movements and wrap up project.
     <span class="to-do-children-checked">Understand the damped least squares / Levenberg–Marquardt algorithm</span>
   </li>
 </ul>
+<ul>
+  <li>Had to return to this twice because I was tripped up on the details.</li>
+  <li>Mainly referred to...</li>
+  <ul>
+    <li><a href="http://www.brnt.eu/publications/brunet2010phd.pdf">http://www.brnt.eu/publications/brunet2010phd.pdf</a></li>
+      <li><a href="https://www.researchgate.net/figure/Levenberg-Marquardt-algorithm_fig1_271100201">https://www.researchgate.net/figure/Levenberg-Marquardt-algorithm_fig1_271100201 (and associated paper)</a></li>
+        <li><a href="https://www.math.ucsd.edu/~sbuss/ResearchWeb/ikmethods/iksurvey.pdf">https://www.math.ucsd.edu/~sbuss/ResearchWeb/ikmethods/iksurvey.pdf</a></li>
+  </ul>
+</ul>
 <ul class="to-do-list">
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Update endpoint world position / find the position of endpoint after apply base transform</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Implement IK methods for arm model: Damped least squares / Levenberg–Marquardt algorithm</span>
-  </li>
   <li>
   <div class="checkbox checkbox-on"></div>
   <span class="to-do-children-checked">Write milestone report</span>
   </li>
+  <li>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Update endpoint world position / find the position of endpoint after apply base transform</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-on"></div>
+    <span class="to-do-children-checked">Implement IK methods for arm model: Damped least squares / Levenberg–Marquardt algorithm</span>
+  </li>
 </ul>
+<ul>
+  <li>Implemented twice because it was much easier than heavily modifying and debugging an implementation in which I only generally understood what to do.</li>
+  <li>Going into next week, need to continue to debug this to get it functioning properly.</li>
+</ul>
+<ul class="to-do-list">
+  <li>
+  <div class="checkbox checkbox-on"></div>
+  <span class="to-do-children-checked">Update milestone report</span>
+  </li>
+</ul>
+<ul class="to-do-list">
 <h3>Week 2: August 8 - August 14</h3>
+<!-- <ul class="to-do-list">
+</ul> -->
 <ul class="to-do-list">
   <li>
     <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Implement IK methods for arm model</span>
-    <ul class="to-do-list">
-      <li>
-        <div class="checkbox checkbox-off"></div>
-        <span class="to-do-children-unchecked">Damped least squares / Levenberg–Marquardt algorithm</span>
-      </li>
-      <li>
-        <div class="checkbox checkbox-off"></div>
-        <span class="to-do-children-unchecked">Selectively damped least squares</span>
-      </li>
-      <li>
-        <div class="checkbox checkbox-off"></div>
-        <span class="to-do-children-unchecked">SMCM</span>
-      </li>
-    </ul>
+    <span class="to-do-children-unchecked">Debug/get working for arm model: Damped least squares / Levenberg–Marquardt algorithm</span>
   </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Implement SMCM IK methods for arm model</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Polish appearance</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Polish functionality</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Allow user to control more variables</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">General bug fixes</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Write final deliverable writeup report (referencing the currently written writeup)</span>
+  </li>
+  <li>
+    <div class="checkbox checkbox-off"></div>
+    <span class="to-do-children-unchecked">Make final deliverable video</span>
+  </li>
+</ul>
+<h3>Reach Goals</h3>
+<ul class="to-do-list">
   <li>
     <div class="checkbox checkbox-off"></div>
     <span class="to-do-children-unchecked">[Reach Goal] Add multiple degrees of freedom</span>
@@ -219,31 +258,6 @@ Add style to the movements and wrap up project.
     <div class="checkbox checkbox-off"></div>
     <span class="to-do-children-unchecked">[Reach Goal] Limit movement range for IK (Show can reach if near. Otherwise, constrained by distance)</span>
   </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Add styling / wrap up</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Add styling / wrap up</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Add finishing touches / bug fixes</span>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Get ready for demo</span>
-    <ul>
-      <li>Make more interactive</li>
-      <li>Add constraints on the fly</li>
-    </ul>
-  </li>
-  <li>
-    <div class="checkbox checkbox-off"></div>
-    <span class="to-do-children-unchecked">Add constraints for expressiveness / style of movement</span>
-  </li>
-  <br />
   <li>
     <div class="checkbox checkbox-off"></div>
     <span class="to-do-children-unchecked">Implement IK methods for arm model</span>
@@ -284,11 +298,11 @@ Add style to the movements and wrap up project.
       </li>
       <li>
         <div class="checkbox checkbox-off"></div>
-        <span class="to-do-children-unchecked">[Reach Goal] Selectively damped least squares</span>
+        <span class="to-do-children-unchecked">[Reach Goal] SMCM with interpolation for trajectory smoothing</span>
       </li>
       <li>
         <div class="checkbox checkbox-off"></div>
-        <span class="to-do-children-unchecked">[Reach Goal] SMCM with interpolation for trajectory smoothing</span>
+        <span class="to-do-children-unchecked">[Reach Goal] Look into stylization</span>
       </li>
     </ul>
   </li>
