--- a/milestone.html
+++ b/milestone.html
@@ -70,7 +70,8 @@ This should be about 1 page long if printed. You should briefly summarize what y
   <figcaption style="width:100%;padding:0 10%;">Major feature 2: Moving the target point</figcaption>
 </figure>
 
-<h3>IK Helpers</h3>
+<h3>IK Helper</h3>
+<p>I don't want to move the mesh while trying out different mesh positioning but I still need to know where the endpoint would be located after the different joint rotations are applied so I can see if it is closer to the target point or not. To this end, I created a helper function to calculate the endpoint position after applying the joint parameters.</p>
 <figure>
 <video style="width:100%;padding:0 10%;" preload controls>
     <source src="./images/point_prediction_demo.mov" />
@@ -112,9 +113,9 @@ My Descent into Madness, a 4-part comedy
 </figure>
 
 <h2>Progress</h2>
-<p>I started working on an IK method. However, while working on it, I realized I needed more helper functions (such as the calculation of a child element's new position once a set of rotations and translations are applied to the armature of its parents without actually applying the rotations) so I had to take a detour to work on that. I think the first method would take the longest to implement due to such detours. Once I get that done, the rest would probably not take as long.</p>
+<p>I started off with creating the GUI. It went smoothly. Although it was a lot of work and I restarted several times, I was able to get a decently working UI after several days. Then, I started working on an IK method. However, while working on it, I realized I needed more helper functions (such as the calculation of a child element's new position once a set of rotations and translations are applied to the armature of its parents without actually applying the rotations) so I had to take a detour to work on that. I think the first method would take the longest to implement due to such detours. Once I get that done, the rest would probably not take as long.</p>
 <p>It was a little rough understanding it because the way people explained it was oftentimes very ambigious because there was a lot of flexibility in how to implement it. However, this also meant I wasn't 100% sure about the terms or how to specifically calculate things (such as for the Jacobian, since everything was interweaved and I didn't have a mathematical formula for the total effect, I ended up searching online for an example and scaling down my implementation so it would be easier to calculate the Jacobian of the joints) and I had to look at several articles to understand what was necessary and what was specific to each implementation (one of them normalized the parameters. which I wasn't sure if I wanted because I wanted to reach the target point, not be in the direction of the target point.)</p>
-<p>It took about three days to do the research for this method. The high level idea was easy to understand, but once I started trying to implement it, a lot of the details tripped me up. From the state I am right now, I may need to implement Cholesky decomposition, which would end up eating up more time. For the other IK goals I had initially planned on doing, depending on how lsong this one takes, I may one get to one of them. One of them is a selectively damped version so hopefully it won't take as long to understand and the other is SMCM, which is completely different so I would need to look into it more. However, regarding stylizing it, I would need to do much more research into how to stylize and that may be a little difficult to do within the timeframe provided.</p>
+<p>It took about three days to do the research for this method. The high level idea was easy to understand, but once I started trying to implement it, a lot of the details tripped me up. From the state I am right now, I may need to implement Cholesky decomposition, which would end up eating up more time. For the other IK goals I had initially planned on doing, depending on how long this one takes, I may one get to one of them. One of them is a selectively damped version so hopefully it won't take as long to understand and the other is SMCM, which is completely different so I would need to look into it more. However, regarding stylizing it, I would need to do much more research into how to stylize and that may be a little difficult to do within the timeframe provided.</p>
 
 <h2>Work Plan Updates</h2>
 <p>The most updated version of the work plan is <a href="./proposal.html#schedule">here</a>.</p>
@@ -122,6 +123,9 @@ My Descent into Madness, a 4-part comedy
 <p>The <a href="./proposal.html#changelog">changes</a> I have made to the plan are:</p>
 <p class="highlight-red_background"><i>August 2 Update</i>: Made forward kinematics a goal. </p>
 <p class="highlight-orange_background"><i>August 4 Update</i>: Made SMCM a [goal] and moved the two models to [reach goal]. </p>
+
+<h2>Looking Forward</h2>
+<p>I have underestimated how long implementation of the algorithms would take. In my current iteration of the LM algorithm implementation, I have reduced the complexity to three joints with a single degree of freedom each and have managed to get a running but not working-as-expected implementation. Because of this difficulty, I do not think I will be able to reach the stylization part of my initial proposal. I have to be mindful of time as I would need to wrap up as well as create the deliverables which means I ought to spend the last few days polishing the appearance and functionality of the demo, writing the report, and creating the video. Essentially, I have four more days to work on additional functionality as I plan on taking the last two days to wrap up. My plan moving forward is to finish a simple, functional implementation of LM and then if I have extra time, begin implementation of SMCM. Drawing from my experience debugging my implementations for LM, I am not confident I could get it to a functional state before it is due, but I would like to take the time to work on it.</p>
 <br />
 </body>
 </html>
